Fixed alignment of buttons in toolbar

--- a/Resources/public/css/hallo.css
+++ b/Resources/public/css/hallo.css
@@ -166,48 +166,48 @@
 
 /* Format */
 .halloToolbar .ui-buttonset .bold_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -144px -34px; }
-.halloToolbar .ui-buttonset .bold_button.ui-state-active{ background-position: -144px 0; }
+.halloToolbar .ui-buttonset .bold_button.ui-state-active{ background-position: -144px -2px; }
 
 .halloToolbar .ui-buttonset .italic_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -171px -34px; }
-.halloToolbar .ui-buttonset .italic_button.ui-state-active{ background-position: -171px 0; }
+.halloToolbar .ui-buttonset .italic_button.ui-state-active{ background-position: -171px -2px; }
 
 .halloToolbar .ui-buttonset .underline_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -199px -34px; }
-.halloToolbar .ui-buttonset .underline_button.ui-state-active{ background-position: -199px 0; }
+.halloToolbar .ui-buttonset .underline_button.ui-state-active{ background-position: -199px -2px; }
 
 /* Lists */
 .halloToolbar .ui-buttonset .Unordered_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -254px -34px; }
-.halloToolbar .ui-buttonset .Unordered_button.ui-state-active{ background-position: -254px 0; }
+.halloToolbar .ui-buttonset .Unordered_button.ui-state-active{ background-position: -254px -2px; }
 
 /* Justify */
 .halloToolbar .ui-buttonset .Left_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -298px -34px; }
-.halloToolbar .ui-buttonset .Left_button.ui-state-active{ background-position: -298px 0; }
+.halloToolbar .ui-buttonset .Left_button.ui-state-active{ background-position: -298px -2px; }
 
 .halloToolbar .ui-buttonset .Center_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -327px -34px; }
-.halloToolbar .ui-buttonset .Center_button.ui-state-active{ background-position: -327px 0; }
+.halloToolbar .ui-buttonset .Center_button.ui-state-active{ background-position: -327px -2px; }
 
 .halloToolbar .ui-buttonset .Right_button{ background: url(/bundles/liipvie/img/buttons.png) no-repeat -357px -34px; }
-.halloToolbar .ui-buttonset .Right_button.ui-state-active{ background-position: -357px 0; }
+.halloToolbar .ui-buttonset .Right_button.ui-state-active{ background-position: -357px -2px; }
 
 /* Paragraph & Heading */
 .halloToolbar .ui-buttonset .p_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -4px -34px; }
-.halloToolbar .ui-buttonset .p_button.ui-state-active{ background-position: -4px 0; }
+.halloToolbar .ui-buttonset .p_button.ui-state-active{ background-position: -4px -2px; }
 
 .halloToolbar .ui-buttonset .h1_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -31px -34px; }
-.halloToolbar .ui-buttonset .h1_button.ui-state-active{ background-position: -31px 0; }
+.halloToolbar .ui-buttonset .h1_button.ui-state-active{ background-position: -31px -2px; }
 
 .halloToolbar .ui-buttonset .h2_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -58px -34px; }
-.halloToolbar .ui-buttonset .h2_button.ui-state-active{ background-position: -58px 0; }
+.halloToolbar .ui-buttonset .h2_button.ui-state-active{ background-position: -58px -2px; }
 
 .halloToolbar .ui-buttonset .h3_button{ background: url("/bundles/liipvie/img/headings.png") no-repeat -85px -34px; }
-.halloToolbar .ui-buttonset .h3_button.ui-state-active{ background-position: -85px 0; }
+.halloToolbar .ui-buttonset .h3_button.ui-state-active{ background-position: -85px -2px; }
 
 /* Anchor */
 .halloToolbar .ui-buttonset .anchor_button{ background: url("/bundles/liipvie/img/imagelink.png") no-repeat -91px -34px; }
-.halloToolbar .ui-buttonset .anchor_button.ui-state-active{ background-position: -91px 0; }
+.halloToolbar .ui-buttonset .anchor_button.ui-state-active{ background-position: -91px -2px; }
 
 /* Image */
 .halloToolbar .ui-buttonset .image_button{ background: url("/bundles/liipvie/img/imagelink.png") no-repeat -13px -34px; }
-.halloToolbar .ui-buttonset .image_button.ui-state-active{ background-position: -13px 0; }
+.halloToolbar .ui-buttonset .image_button.ui-state-active{ background-position: -13px -2px; }
 
 
 /* END Buttons */
